// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
.emotion-0 {
  font-family: "Segoe UI",Helvetica,Arial,sans-serif;
  font-size: 14px;
}

.emotion-0 .header {
  height: 48px;
  background-color: #242729;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 .main {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100vh - 48px);
}

<div
  className="emotion-0"
>
  <div
    className="header"
  >
    <Brand />
    <Navigation />
  </div>
  <div
    className="main"
  />
</div>
`;

exports[`should render children 1`] = `
.emotion-0 {
  font-family: "Segoe UI",Helvetica,Arial,sans-serif;
  font-size: 14px;
}

.emotion-0 .header {
  height: 48px;
  background-color: #242729;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 .main {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100vh - 48px);
}

<div
  className="emotion-0"
>
  <div
    className="header"
  >
    <Brand />
    <Navigation />
  </div>
  <div
    className="main"
  >
    <Child />
  </div>
</div>
`;
